# sent-pattern

./: .gitignore  LICENCE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/docker_poetry/: .dockerignore  Dockerfile  pyproject.toml
examples/docker_poetry_fastapi/: .dockerignore  Dockerfile  Makefile  READEME.md  main.py  pyproject.toml
examples/test_env/: Makefile  README.md  main.py  requirements-dev.txt
sent_pattern/: __init__.py  tags.py
sent_pattern/core/: elementsfactory.py  patternfactory.py  type.py
sent_pattern/core/elements/: __init__.py  adjective.py  elements.py  object.py  patterns.py  phrase.py  relative.py  rootelements.py  subject.py  verb.py
sent_pattern/core/elements/sub/: __init__.py  phrase.py  relative.py
sent_pattern/core/factory/: __init__.py  elements.py  pattern.py
sent_pattern/core/interface/: Ielement.py  Ielements.py  Ipattern.py
sent_pattern/pipelines/: __init__.py  sent_pattern.py  span_noun.py  sub_texts.py
test/: test_element.py  test_phrase.py  test_sentpattern.py  test_sents.py  test_tag.py
test/analysis/: dep.ipynb
tests/: test_phrase.py  test_sentpattern.py
